styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

:root {
    --primary: #2e8034;
    --primarydark: #007771;
    --primarylight: #3cff00;
    --secondary: #212421;
    --background: #0f0f0f;
    --highlight: #3f443f;
}

body {
    font-family: 'Poppins', sans-serif;
    margin: 0;
    padding: 0;
    background-color: var(--background);
    color: #ffffff;
    user-select: none;
    height: 100%;
    background-image: url("images/tile.png");
    background-size: 40px;
}

h1 {
    font-size: 60px;
}

p {
    font-size: 30px;
}

#nav {
    width: 100%;
    height: 80px;
    text-align: center;
    background-color: var(--secondary);
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    position: fixed;
    border-bottom: 1px solid var(--highlight);
}

#nav h1 {
    font-size:30px;
}

a {
    text-decoration: none;
    color: #ffffff;
}

#navlink:hover {
    color: var(--primary);
    transition: 0.1s;
}

#hero {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 750px;
    padding-top: 80px;
}

#hero #spacer {
    width: 100px;
}

#hero #profile {
    border-radius: 50%;
    max-height: 500px;
    animation: fadein 1s ease-in-out;
    z-index: -1;
    background-color: var(--secondary);
}

#hero #info {
    animation: fadein 1s ease-in-out;
    z-index: -1;
}

#hero #info hr {
    height: 3px;
    border: none;
    background-color: var(--highlight);
    margin-bottom: 50px;
    margin-top: 40px;
}

#hero h1 {
    color: var(--primary);
    margin: 0;
}

#homelink:hover {
    cursor:pointer;
    filter:brightness(0.6);
    transition: 0.3s;
}

#hero #info p {
    margin: 0;
    margin-top: -10px;
}

#hero #icons {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#hero #icons img {
    max-height: 50px;
    border-radius: 0%;
    animation: float 4s ease-in-out infinite;
    z-index: -1;
}

#about {
    background-color: var(--secondary);
    width: 100%;
    height: 600px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

#about img {
    max-height: 100px;
    border-radius: 50%;
}

#about #heading {
    display: flex;
    align-items: center;
}

#about p {
    max-width: 800px;
}

#contactme {
    width: 100%;
    padding-top: 100px;
    padding-bottom: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

#contactme h1 {
    margin: 0;
}

#contactme form {
    display: flex;
    flex-direction: row;
    width: 700px;
    justify-content: space-between;
}

#contactme form p {
    font-size: 18px;
}

#contactme form input {
    padding: 10px;
    border-radius: 10px;
    font-size: 20px;
}

#contactme form textarea {
    font-size: 20px;
    padding: 10px;
    border-radius: 10px;
    font-family: 'Poppins', sans-serif;
    max-height: 40%;
}

#contactme form button {
    border-radius: 10px;
    background-image: linear-gradient(to right, var(--primarydark), var(--primarylight));
    color: white;
    font-family: 'Poppins', sans-serif;
    font-weight: bold;
    min-height: 40px;
}

#contactme #info-section {
    min-height: 100%;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
}

#contactme #message-section {
    width: 400px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-top: -4px;
    margin-bottom: -1px;
}

#footer {
    width: 100%;
    height: 60px;
    background-color: var(--secondary);
    display: flex;
    align-items: center;
    justify-content: center;
}

#footer p {
    font-size: 18px;
    color: var(--highlight);
    font-weight: bold;
}

@keyframes float {
    0% {
        transform: translatey(0px);
    }
    50% {
        transform: translatey(20px);
    }
    100% {
        transform: translatey(0px);
    }
}

@keyframes fadein {
    0% {
        transform: translatey(-50px);
        opacity: 0;
    }
    100% {
        transform: translatey(0px);
        opacity: 1;
    }
}

@media (orientation: portrait) {
    #nav {
        min-height: 150px;
        font-size: 40px;
    }

    #homelink {
        font-size: 40px;
    }

    #navlink {
        background-color: var(--highlight);
        padding: 25px;
        border-radius: 30px;
    }

    #hero {
        flex-direction: column;
        min-height: 1000px;
        padding-top: 400px;
        padding-bottom: 400px;
    }

    #hero #profile {
        min-height: 700px;
    }

    #hero #spacer {
        min-height: 100px;
    }

    #hero #info h1 {
        font-size: 90px;
    }
    #hero #info p {
        font-size: 50px;
    }

    #hero #info hr {
        height: 6px;
        max-width: 50%;
    }

    #hero #icons img {
        min-height: 120px;
    }

    #hero #info {
        min-width: 70%;
        text-align: center;
    }

    #about {
        min-height: 1000px;
    }

    #about h1 {
        font-size: 100px;
    }

    #about p {
        font-size: 50px;
    }

    #contactme h1 {
        font-size: 100px;
    }

    #contactme form {
        flex-direction: column;
        min-height: 1200px;
        justify-content: space-evenly;
    }

    #contactme form p {
        font-size: 60px;
    }

    #contactme form input {
        font-size: 60px;
        padding: 30px;
        border-radius: 30px;
    }

    #contactme form textarea {
        font-size: 60px;
        padding: 30px;
        border-radius: 30px;
    }

    #contactme form button {
        font-size: 80px;
        padding-top: 40px;
        padding-bottom: 40px;
        border-radius: 50px;
    }

    #contactme #message-section p {
        margin-bottom: -20px;
    }

    #contactme #message-section {
        min-width: 100%;
        height: 900px;
        justify-content: space-between;
    }

    #footer {
        min-height: 500px;
    }

    #footer p {
        font-size: 90px;
        max-width: 70%;
        text-align: center;
    }
}

